test/pass/internal/simple_if_elif_return_fold.lily
define f(a: Integer) : Integer
{
    if a == 1:
        return 1
    elif a == 2:
        return 2
    else:
        return 3
}
